# qmlmobilenet

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
minimal/: CMakeLists.txt  main.cpp
model/: info.txt
src/: CMakeLists.txt  bitmap_helpers_impl.h  cocodetectionfilter.cpp  cocodetectionfilter.h  cocodetectionmodel.cpp  cocodetectionmodel.h  cocodetectionworker.cpp  cocodetectionworker.h  main.cpp  main.qml  qml.qrc
